# MCp-accessibility-Muvva

./: .gitignore  README.md  SEQUENTIAL_THINKING_COMMANDS.md  mcp.json  pyproject.toml
.github/workflows/: ci.yml
accessibility_mcp/: __init__.py  audit.py  config.py  server.py
accessibility_mcp/engine/: axe_runner.py  browser.py  crawler.py  node_bridge.py  session.py
accessibility_mcp/engines_node/: achecker.json  package-lock.json  package.json  runner.mjs  setup.sh
accessibility_mcp/reporting/: builder.py  gds_summary.py  json_report.py  markdown_report.py  models.py
accessibility_mcp/rules/: automated_checks.py  axe_rules.py  govuk_checks.py  groups.py  normalize.py  remediation.py  wcag22.py
scripts/: generate_axe_rules.py
tests/: conftest.py  test_audit_integration.py  test_automated_checks.py  test_axe_rules.py  test_config_discovery.py  test_groups.py  test_multi_engine_integration.py  test_normalize.py  test_reporting.py  test_rules.py  test_server_tools.py
tests/fixtures/: failing.html  govuk_passing.html
